Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-27655

Fusion style - incorrect metrics

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.0.0
    • 5.0.0
    • GUI: Look'n'Feel
    • None
    • Microsoft Windows 7 Ultimate 64-bit SP1

    Description

      Some of the metrics in the Fusion style seem to be a bit off. I have attached a screenshot of the style example after switching from Plastique to Fusion style.

      Things to note:
      -Menu dropdown has overlapping items
      -Checkbox for Group 3 has the top cut off
      -Horizontal and vertical sliders have the borders cut off on 3 out of 4 sides

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            bachewii Jens
            net147 Jonathan Liu
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes